tests/ui/fail/message-reference/message-reference.rs
l10n::init!();

fn main() {
    let _ = l10n::message!("resource", "baz");
}
