tests/ui/fail/message-reference/message-reference.stderr
error: missing arguments: "bar-var", "baz-var", "foo-var" for resource: "resource" and key: "baz"
 --> tests/ui/fail/message-reference/message-reference.rs:4:40
  |
4 |     let _ = l10n::message!("resource", "baz");
  |                                        ^^^^^
